:lipstick: Add position relative to #root element (to fix overflow hidden)

--- a/frontend/src/assets/styles/base/_global.scss
+++ b/frontend/src/assets/styles/base/_global.scss
@@ -47,6 +47,7 @@ body {
 }
 
 #root {
+  position: relative;
   height: 100%;
   width: 100%;
   overflow: hidden;
